# b2luigi

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/: labeler.yml
.github/workflows/: deploy.yml  test.yml
b2luigi/: __init__.py  core.py  get_all_deps.py  helper_tasks.py  helpers.py  process.py  runner.py  settings.py  utils.py
b2luigi/basf2_helper/: __init__.py  data.py  targets.py  tasks.py  utils.py
b2luigi/batch/: cache.py  workers.py
b2luigi/cli/: arguments.py  batch.py  monitor.py  process.py  runner.py
b2luigi/core/: dispatchable_task.py  executable.py  helper_tasks.py  parameter.py  settings.py  task.py  tasks.py  temporary_wrapper.py  utils.py
docs/: Makefile  conf.py  index.rst
docs/advanced/: basf2-examples.rst  basf2.rst  development.rst  examples.rst  faq.rst  todo.rst
docs/documentation/: api.rst  b2luigi.basf2_helper.rst  b2luigi.batch.rst  b2luigi.core.utils.rst  run_modes.rst
docs/usage/: batch.rst  data-management.rst  installation.rst  quickstart.rst
examples/: basf2_chain_example.py  example.py
examples/basf2/: basf2_chain_example.py
examples/gbasf2/: example_mdst_analysis.py  gbasf2_example.py  mdst_analysis.py  settings.json
examples/gbasf2_fei_training/: B_generic_train.py  README.md  fei_grid_workflow.py  settings.json
examples/htcondor/: htcondor_example.py  settings.json  setup_script.sh
tests/: helpers.py
tests/basf2_helper/: test_utils.py
tests/batch/: batch_task_1.py  batch_task_2.py  (+4 more)
(+55 files in other folders)
