[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "b2luigi"
author = "Nils Braun"
author-email = "nils.braun@kit.edu"
home-page = "https://github.com/nils-braun/b2luigi"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

requires=[
    "GitPython>=2.1.11",
    "cachetools>=2.1.0",
    "colorama>=0.3.9",
    "dataset>=1.5.2",
    "jinja2",
    "luigi>=3.0.2",
    "parse>=1.8.4",
    "retry2>=0.9.3",
    "xdg>=5.1.1",
]
